--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -35,6 +35,7 @@ pyasn1_modules==0.4.0
 pycparser==2.22
 PyJWT==2.9.0
 pyparsing==3.1.2
+python-dotenv==1.0.1
 requests==2.32.3
 rsa==4.9
 uritemplate==4.1.1
