--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -36,6 +36,7 @@ pycparser==2.22
 PyJWT==2.9.0
 pyparsing==3.1.2
 python-dotenv==1.0.1
+pytz==2024.1
 requests==2.32.3
 rsa==4.9
 uritemplate==4.1.1
