--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,7 @@
     "@uiw/react-heat-map": "^2.2.2",
     "@uiw/react-tooltip": "^4.22.3",
     "axios": "^1.7.3",
+    "firebase": "^11.1.0",
     "highcharts": "^11.4.7",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
